# a-self-informing-bayesian-model

./: .gitignore  CMakeLists.txt  README.md
_dev_stan/: stan_test.py
benchmarks/: .gitignore  convergence_analysis_chen.ipynb  harth_dataset_clustering.ipynb  simpson_paradox.ipynb
benchmarks/data/: harth_4d_dataset_1000.csv  harth_4d_dataset_10000.csv  harth_dataset_1000.csv  harth_dataset_10000.csv
benchmarks/data/chen/: multidim_chen.txt  multidim_chen_hc_0.txt  multidim_chen_hc_1.txt  multidim_chen_no_hc.txt
benchmarks/data/simpson/: test_data.txt  test_params.txt
data/: apt_price_berlin_test.txt  apt_price_berlin_train.txt
examples/: CMakeLists.txt  bench_model_based_kriging.cpp  run_adam_lv.cpp  run_chen_hmc_convergence.cpp  run_harth_hmc.cpp  run_harth_opt_search.cpp  run_hmc_lv.cpp  run_hmc_tf2.cpp  run_hmc_tf2_hc.cpp  run_lotka_volterra.cpp  run_model_based_kriging.cpp  run_multidim_chen.cpp  run_optimistic_search2.cpp  run_optimistic_search_lv.cpp  run_simpson.cpp  run_simpson_contour.cpp  run_simpson_hmc_convergence.cpp  run_simpson_hmc_no_hc.cpp  run_simpson_hmc_with_hc.cpp  run_simpson_opt_search.cpp
examples/LikelihoodFunctions/: ClusteringLLH.hpp  LVLogLikelihood.hpp  LinearRegressionLLH.hpp  ModelBasedKriging.hpp  MultidimChen.hpp  OnedimChen.hpp
include/: AdamGradientAscent.hpp  Distributions.hpp  DistributionsConcepts.hpp  EB.hpp  HMCSampler.hpp  Hypercube.hpp  Macros.hpp  OptimisticSearch.hpp  Prior.hpp  RandomValue.hpp
include/CompiletimeDistributions/: Beta.hpp  Constant.hpp  Cutoff.hpp  DistributionExpr.hpp  HalfNormal.hpp  Normal.hpp  StudentT.hpp  Uniform.hpp
include/RuntimeDistributions/: Beta.hpp  Constant.hpp  Cutoff.hpp  DistributionExpr.hpp  HalfNormal.hpp  Normal.hpp  StudentT.hpp  Uniform.hpp
include/Utility/: Helper.hpp  ProgressBar.hpp  ReadCSVFile.hpp
report/: algo_example.ipynb  chen_reproduced.ipynb
test/: CMakeLists.txt  test_adam.cpp  test_compiletime_distributions.cpp  test_hmc_adjoint.cpp  test_hmc_tangent.cpp  test_hypercube.cpp  test_prior.cpp  test_random.cpp  test_read_csv.cpp  test_runtime_distributions.cpp
